--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "homepage": "https://github.com/mohamedsamara/Eat-Da-Burger",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-handlebars": "^3.0.2",
     "mysql": "^2.17.1"
   }
 }
