--- a/bower.json
+++ b/bower.json
@@ -2,13 +2,27 @@
   "name": "eat-da-burger",
   "description": "Eat Da Burger Application",
   "main": "server.js",
-  "authors": ["Mohamed Samara (https://github.com/mohamedsamara)"],
+  "authors": [
+    "Mohamed Samara (https://github.com/mohamedsamara)"
+  ],
   "license": "ISC",
-  "keywords": ["node", "express", "mysql", "express-handlebars"],
+  "keywords": [
+    "node",
+    "express",
+    "mysql",
+    "express-handlebars"
+  ],
   "homepage": "https://github.com/mohamedsamara/Eat-Da-Burger",
-  "ignore": ["**/.*", "node_modules", "bower_components", "test", "tests"],
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
   "dependencies": {
     "jquery": "^3.4.0",
-    "bootstrap": "^4.3.1"
+    "bootstrap": "^4.3.1",
+    "components-font-awesome": "^5.4.2"
   }
 }
