--- a/bower.json
+++ b/bower.json
@@ -2,24 +2,11 @@
   "name": "eat-da-burger",
   "description": "Eat Da Burger Application",
   "main": "server.js",
-  "authors": [
-    "Mohamed Samara (https://github.com/mohamedsamara)"
-  ],
+  "authors": ["Mohamed Samara (https://github.com/mohamedsamara)"],
   "license": "ISC",
-  "keywords": [
-    "node",
-    "express",
-    "mysql",
-    "express-handlebars"
-  ],
-  "homepage": "https://github.com/mohamedsamara/Eat-Da-Burger",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
+  "keywords": ["node", "express", "mysql", "express-handlebars"],
+  "homepage": "https://github.com/mohamedsamara/eat-da-burger#readme",
+  "ignore": ["**/.*", "node_modules", "bower_components", "test", "tests"],
   "dependencies": {
     "jquery": "^3.4.0",
     "bootstrap": "^4.3.1",
