--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "eat-da-burger",
   "version": "1.0.0",
-  "description": "Eat Da Burger Application",
+  "description": "Eat Da Burger",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "postinstall": "bower cache clean && bower install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +26,7 @@
   "homepage": "https://github.com/mohamedsamara/eat-da-burger#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bower": "^1.8.8",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
