--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "express-handlebars"
   ],
   "author": "Mohamed Samara (https://github.com/mohamedsamara)",
-  "license": "ISC",
+  "license": "MIT", 
   "bugs": {
     "url": "https://github.com/mohamedsamara/eat-da-burger/issues"
   },
